recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:19: error: type mismatch;
 found   : Boolean
 required: Int
  for(i <- 0 to i < 3)
                  ^