recursion.logo.square.FourSquare.scala.code
override def run() {
  faireCarre();
  droite(90);
  faireCarre();
  droite(90);
  droite(90);
  faireCarre();
  droite(90);
  droite(90);
  faireCarre();
  droite(90);
  droite(90);
}

def faireCarre()
{
  baisseCrayon();
  var i:Int = 0;
  for(i <- 0 to i < 3)
  {
    avance(100);
    droite(90);
  }
}